projects/aws/infra-1/3-igw.tf
#Create Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "${local.project.name}-igw"
    }
}
